data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3431.wast
;; 10. **Br If with Invalid Call and Nested Loops**:    - **Description**: Construct a nested loop structure with conditional exits (`br_if`) and place an invalid `call` instruction within the conditionally exited inner loop.    - **Constraint**: The function index used in the `call` should be non-existent and inside an inner loop with conditional exit.    - **Relation to Mismanagement of Block Nesting**: Identifies potential issues when handling conditional exits within nested loops and invalid function calls.

(assert_invalid
  (module
    (func $type-br_if-invalid-call
      (block
        (loop
          (br_if 0 
            (call 9999)
          )
          (br 1)
        )
      )
    )
  )
  "unknown function"
)